alternate (non-braille) display and configurable paging in the full board view mode

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 html {
 	font-size: 36px;
 }
+.hidden {
+	display:none;
+}
 </style>
 
 <body>
 <div id="output"></div>
+<div id="alt-output"></div>
 
 	<script src="./jquery.js" type="text/javascript"></script>
 	<script src="./jquery.hotkeys.js" type="text/javascript"></script>
