Added full board display prototype (press X to show/hide)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@ html {
 .hidden {
 	display:none;
 }
+#full-board {	
+	float: right;
+	font-size: 12px;
+}
 </style>
 
 <body role="application">
+<div id="full-board"></div>
 <div id="output" role="application" aria-live="rude"></div>
 <div id="alt-output"></div>
 
